{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 432,
  "lineage": "b4e3f2f1-5c86-9fd1-e0bb-9300d20625ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HAPROXY-X1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4ecc76a3575e53b",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-0b705ea0ea2cdd293",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LatamImagineHaProxyPolicyRole",
            "id": "i-0b705ea0ea2cdd293",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af6f5845dc8d1733",
            "private_dns": "ip-10-121-204-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.113",
            "public_dns": "ec2-3-94-192-35.compute-1.amazonaws.com",
            "public_ip": "3.94.192.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0c438ad302cd3c065",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "QA-LATAM-HAPROXY-X1"
            },
            "tags_all": {
              "Name": "QA-LATAM-HAPROXY-X1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.LatamImagineHaProxyPolicyRole",
            "aws_iam_role.LatamImagineHaProxyRole",
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HAPROXY-X2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dcd4959f268d0b7d",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-045d93580cd8a52c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LatamImagineHaProxyPolicyRole",
            "id": "i-045d93580cd8a52c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073250d83133464b4",
            "private_dns": "ip-10-121-204-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.123",
            "public_dns": "ec2-54-86-162-206.compute-1.amazonaws.com",
            "public_ip": "54.86.162.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0b880efbe6cf2b8af",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "QA-LATAM-HAPROXY-X2"
            },
            "tags_all": {
              "Name": "QA-LATAM-HAPROXY-X2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.LatamImagineHaProxyPolicyRole",
            "aws_iam_role.LatamImagineHaProxyRole",
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HAPROXY-X3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027d724b76b108757",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-0e8a992ff43ec5929",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LatamImagineHaProxyPolicyRole",
            "id": "i-0e8a992ff43ec5929",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd2b864766a8dde2",
            "private_dns": "ip-10-121-204-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.133",
            "public_dns": "ec2-3-95-206-62.compute-1.amazonaws.com",
            "public_ip": "3.95.206.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-09cd43a55900f5c16",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "QA-LATAM-HAPROXY-X3"
            },
            "tags_all": {
              "Name": "QA-LATAM-HAPROXY-X3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.LatamImagineHaProxyPolicyRole",
            "aws_iam_role.LatamImagineHaProxyRole",
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HAPROXY-Y1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa61bfb1900af895",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-07f7e00199083150a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LatamImagineHaProxyPolicyRole",
            "id": "i-07f7e00199083150a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-001b03123e3d12805",
            "private_dns": "ip-10-121-214-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.113",
            "public_dns": "ec2-3-238-35-40.compute-1.amazonaws.com",
            "public_ip": "3.238.35.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-006afe770720fc67e",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "QA-LATAM-HAPROXY-Y1"
            },
            "tags_all": {
              "Name": "QA-LATAM-HAPROXY-Y1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.LatamImagineHaProxyPolicyRole",
            "aws_iam_role.LatamImagineHaProxyRole",
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HAPROXY-Y2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd6f98605e923a12",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-0603000418c0078f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LatamImagineHaProxyPolicyRole",
            "id": "i-0603000418c0078f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d725eaa717fe999",
            "private_dns": "ip-10-121-214-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.123",
            "public_dns": "ec2-44-198-187-103.compute-1.amazonaws.com",
            "public_ip": "44.198.187.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-07c2fdf3d57c76adb",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "QA-LATAM-HAPROXY-Y2"
            },
            "tags_all": {
              "Name": "QA-LATAM-HAPROXY-Y2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.LatamImagineHaProxyPolicyRole",
            "aws_iam_role.LatamImagineHaProxyRole",
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "HAPROXY-Y3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02a23c085296b3da5",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-0231264dd5c9c0981",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LatamImagineHaProxyPolicyRole",
            "id": "i-0231264dd5c9c0981",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7467cb469497695",
            "private_dns": "ip-10-121-214-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.133",
            "public_dns": "ec2-44-193-212-116.compute-1.amazonaws.com",
            "public_ip": "44.193.212.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-03e90bc567fb3bfda",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "QA-LATAM-HAPROXY-Y3"
            },
            "tags_all": {
              "Name": "QA-LATAM-HAPROXY-Y3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.LatamImagineHaProxyPolicyRole",
            "aws_iam_role.LatamImagineHaProxyRole",
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LATAM-X-POSTGRESQL-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03921e532b2a13ebb",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-02e016ba4a2a294a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e016ba4a2a294a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e08655a4e6ec5f10",
            "private_dns": "ip-10-121-204-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.112",
            "public_dns": "ec2-3-91-65-22.compute-1.amazonaws.com",
            "public_ip": "3.91.65.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 600,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-067903f902f3d3ad3",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "LATAM-X-POSTGRESQL-01"
            },
            "tags_all": {
              "Name": "LATAM-X-POSTGRESQL-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LATAM-X-POSTGRESQL-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03921e532b2a13ebb",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-094dc00690fa451fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094dc00690fa451fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0629cedc9856bbc76",
            "private_dns": "ip-10-121-204-122.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.122",
            "public_dns": "ec2-18-212-92-28.compute-1.amazonaws.com",
            "public_ip": "18.212.92.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 600,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0f30b7b9716cc5e96",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "LATAM-X-POSTGRESQL-02"
            },
            "tags_all": {
              "Name": "LATAM-X-POSTGRESQL-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LATAM-Y-POSTGRESQL-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03921e532b2a13ebb",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-0f64cbe9153466d71",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f64cbe9153466d71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1eecfb5173cde6f",
            "private_dns": "ip-10-121-214-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.112",
            "public_dns": "ec2-18-205-3-117.compute-1.amazonaws.com",
            "public_ip": "18.205.3.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 600,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0477565adcc7bd4de",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "LATAM-Y-POSTGRESQL-03"
            },
            "tags_all": {
              "Name": "LATAM-Y-POSTGRESQL-03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "QA-LATAM-DOCKER-X1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03179ad409aad2246",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-0b3062fc9b5d5060e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3062fc9b5d5060e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0627679bdf9a1910e",
            "private_dns": "ip-10-121-204-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.111",
            "public_dns": "ec2-54-86-52-123.compute-1.amazonaws.com",
            "public_ip": "54.86.52.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 450,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0ab312d6a6dfa550c",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "QA-LATAM-DOCKER-X1"
            },
            "tags_all": {
              "Name": "QA-LATAM-DOCKER-X1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "QA-LATAM-DOCKER-X2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a9062e96a9f50b",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-055148c7f0c966178",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055148c7f0c966178",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073369d605535f188",
            "private_dns": "ip-10-121-204-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.121",
            "public_dns": "ec2-3-85-61-85.compute-1.amazonaws.com",
            "public_ip": "3.85.61.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 450,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0da91d93f71d4ca6e",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "QA-LATAM-DOCKER-X2"
            },
            "tags_all": {
              "Name": "QA-LATAM-DOCKER-X2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "QA-LATAM-DOCKER-X3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0559e7c82d50ca822",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-07120151e4b27ad3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07120151e4b27ad3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ad98df888ac3fdc",
            "private_dns": "ip-10-121-204-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.204.131",
            "public_dns": "ec2-34-201-148-167.compute-1.amazonaws.com",
            "public_ip": "34.201.148.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 450,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0bd12bd8b2d6162d3",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cc0d506a44bfd51",
            "tags": {
              "Name": "QA-LATAM-DOCKER-X3"
            },
            "tags_all": {
              "Name": "QA-LATAM-DOCKER-X3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "QA-LATAM-DOCKER-Y1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e809ed611c1d399",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-087107df89cf3c476",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087107df89cf3c476",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d466e1b02181334",
            "private_dns": "ip-10-121-214-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.111",
            "public_dns": "ec2-34-239-227-175.compute-1.amazonaws.com",
            "public_ip": "34.239.227.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 450,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0fbdde911e22e116a",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "QA-LATAM-DOCKER-Y1"
            },
            "tags_all": {
              "Name": "QA-LATAM-DOCKER-Y1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "QA-LATAM-DOCKER-Y2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0159254af97b99852",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-042cbd7faaba59e91",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042cbd7faaba59e91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07cdb2548307ccf71",
            "private_dns": "ip-10-121-214-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.121",
            "public_dns": "ec2-18-209-209-50.compute-1.amazonaws.com",
            "public_ip": "18.209.209.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 450,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0c16c143ed0828ff7",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "QA-LATAM-DOCKER-Y2"
            },
            "tags_all": {
              "Name": "QA-LATAM-DOCKER-Y2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "QA-LATAM-DOCKER-Y3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003800f9b631039ce",
            "arn": "arn:aws:ec2:us-east-1:984972946057:instance/i-069432d1e6f8736ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069432d1e6f8736ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "LATAM_QA",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aad76f942f204f1d",
            "private_dns": "ip-10-121-214-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.214.131",
            "public_dns": "ec2-44-193-223-31.compute-1.amazonaws.com",
            "public_ip": "44.193.223.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 450,
                "kms_key_id": "arn:aws:kms:us-east-1:984972946057:key/0e27e3cb-0f9b-4cea-8d6d-73d010411a28",
                "throughput": 0,
                "volume_id": "vol-0b48d1a02bfba8e9f",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b622918a67d6b026",
            "tags": {
              "Name": "QA-LATAM-DOCKER-Y3"
            },
            "tags_all": {
              "Name": "QA-LATAM-DOCKER-Y3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076939b9e4f4c5f15"
            ]
          },
          "dependencies": [
            "aws_security_group.HAPROXY-SG",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "QA-LATAM-IMAGINE-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984972946057:internet-gateway/igw-03fab1cb0ead09fc0",
            "id": "igw-03fab1cb0ead09fc0",
            "owner_id": "984972946057",
            "tags": {
              "Name": "QA-LATAM-IMAGINE-IGW"
            },
            "tags_all": {
              "Name": "QA-LATAM-IMAGINE-IGW"
            },
            "vpc_id": "vpc-0740097d4e707ed95"
          },
          "dependencies": [
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "QA-LATAM-RTB-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984972946057:route-table/rtb-014559f2add54ca91",
            "id": "rtb-014559f2add54ca91",
            "owner_id": "984972946057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fab1cb0ead09fc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-LATAM-IMAGINE-RTB1-Public"
            },
            "tags_all": {
              "Name": "QA-LATAM-IMAGINE-RTB1-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0740097d4e707ed95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.QA-LATAM-IMAGINE-IGW",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_access_204_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2293bc4d0be7b70",
            "route_table_id": "rtb-014559f2add54ca91",
            "subnet_id": "subnet-00cc0d506a44bfd51"
          },
          "dependencies": [
            "aws_internet_gateway.QA-LATAM-IMAGINE-IGW",
            "aws_route_table.QA-LATAM-RTB-Public",
            "aws_subnet.QA-LATAM-IMAGINE-X-SUBNET-204",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_access_214_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047d3b286e27af4d5",
            "route_table_id": "rtb-014559f2add54ca91",
            "subnet_id": "subnet-0b622918a67d6b026"
          },
          "dependencies": [
            "aws_internet_gateway.QA-LATAM-IMAGINE-IGW",
            "aws_route_table.QA-LATAM-RTB-Public",
            "aws_subnet.QA-LATAM-IMAGINE-Y-SUBNET-214",
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HAPROXY-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984972946057:security-group/sg-076939b9e4f4c5f15",
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076939b9e4f4c5f15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all incoming",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "HAPROXY-SG",
            "name_prefix": "",
            "owner_id": "984972946057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow all inbound and outbound traffic"
            },
            "tags_all": {
              "Name": "Allow all inbound and outbound traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0740097d4e707ed95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "QA-LATAM-IMAGINE-X-SUBNET-204",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984972946057:subnet/subnet-00cc0d506a44bfd51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.121.204.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cc0d506a44bfd51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984972946057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-LATAM-IMAGINE-X-SUBNET-204"
            },
            "tags_all": {
              "Name": "QA-LATAM-IMAGINE-X-SUBNET-204"
            },
            "vpc_id": "vpc-0740097d4e707ed95"
          },
          "dependencies": [
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "QA-LATAM-IMAGINE-Y-SUBNET-214",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984972946057:subnet/subnet-0b622918a67d6b026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.121.214.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b622918a67d6b026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984972946057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-LATAM-IMAGINE-Y-SUBNET-214"
            },
            "tags_all": {
              "Name": "QA-LATAM-IMAGINE-Y-SUBNET-214"
            },
            "vpc_id": "vpc-0740097d4e707ed95"
          },
          "dependencies": [
            "aws_vpc.QA-LATAM-IMAGINE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "QA-LATAM-IMAGINE-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984972946057:vpc/vpc-0740097d4e707ed95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.121.0.0/16",
            "default_network_acl_id": "acl-01179dad6581a6304",
            "default_route_table_id": "rtb-077276bd0812d1442",
            "default_security_group_id": "sg-06385ce667d101cb1",
            "dhcp_options_id": "dopt-69f0b713",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0740097d4e707ed95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077276bd0812d1442",
            "owner_id": "984972946057",
            "tags": {
              "Name": "QA-LATAM-IMAGINE-VPC"
            },
            "tags_all": {
              "Name": "QA-LATAM-IMAGINE-VPC"
            }
          }
        }
      ]
    }
  ]
}